[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Kecoak.gd" type="Script" id=1]
[ext_resource path="res://assets/images/kecoak_stop1.png" type="Texture" id=2]
[ext_resource path="res://assets/images/kecoak_stop2.png" type="Texture" id=3]
[ext_resource path="res://assets/images/kecoak_walk1.png" type="Texture" id=4]
[ext_resource path="res://assets/images/kecoak_walk2.png" type="Texture" id=5]
[ext_resource path="res://assets/images/smashed.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "stop",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.4619
height = 28.8264

[node name="Kecoak" type="Area2D" groups=[
"cockroaches",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Audio Bus", "Collision", "Transform" ]
speed = 200
energy = 10

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "stop"
frame = 1
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0.0500042, 4.62539 )
scale = Vector2( 2.46993, 2.29684 )
shape = SubResource( 2 )

[node name="EatingTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="Tween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="body_entered" from="." to="." method="_on_Kecoak_body_entered"]

[connection signal="input_event" from="." to="." method="_on_Kecoak_input_event"]

[connection signal="timeout" from="EatingTimer" to="." method="_on_EatingTimer_timeout"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]


